--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: python -m pip install --upgrade build setuptools wheel
 
       - name: Build release distributions
-        run: python -m build
+        run: python -m build .
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
