--- a/.github/workflows/python-publish3.yml
+++ b/.github/workflows/python-publish3.yml
@@ -54,4 +54,5 @@ jobs:
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
           packages-dir: dist/
