--- a/vMark-node/MANIFEST.in
+++ b/vMark-node/MANIFEST.in
@@ -2,5 +2,6 @@
 include requirements.txt
 include LICENSE
 include README.md
+include main.py
 recursive-include plugins *
 recursive-include docs *
